# univercpp-labs

./: .gitignore  CMakeLists.txt
src/Competition/: main.cpp
src/course_2021/ht_1/: task1.cpp
src/course_2021/ht_12/: euler1.txt
src/course_2021/ht_2/: task2.cpp
src/course_2021/ht_3/: task3.cpp
src/course_2021/ht_5/: task5.cpp
src/course_2021/ht_8/: task8.cpp
src/course_2021/training/: circtor.cpp  msoftcon.h  times1.cpp
src/course_2022/hw_1/: hw_1.cpp  task1.cpp
src/course_2022/hw_2/: Complex.cpp  Complex.h  task.cpp
src/course_2022/hw_3/: Train.cpp  Train.h  task.cpp
src/course_2022/hw_4/: Time.cpp  Time.h  task.cpp
src/course_2022/hw_5/: task.cpp
src/course_2022/hw_6/: Circle.cpp  Circle.h  Equilateral.cpp  Equilateral.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  main.cpp
src/course_2022/hw_7/: task7.cpp
src/course_2022/hw_8/: task8.cpp
src/ht_10/: task10.cpp
src/ht_11/: task11.cpp
src/ht_12/: euler01.txt  rk01.txt  rk1.txt  task12.cpp
src/ht_4/: task4.cpp
src/ht_6/: task6.cpp
src/ht_7/: ra.txt  task7.cpp
src/ht_9/: task9.cpp
src/training/: test.cpp
