cmake_minimum_required(VERSION 3.17)
project(univercpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(t0 src/training/circtor.cpp)
add_executable(t1 src/training/times1.cpp)
add_executable(t2 src/training/test.cpp)
add_executable(l1 src/ht_1/task1.cpp)
add_executable(l2 src/ht_2/task2.cpp)
add_executable(l3 src/ht_3/task3.cpp)
add_executable(l4 src/ht_4/task4.cpp)
add_executable(l5 src/ht_5/task5.cpp)
add_executable(l6 src/ht_6/task6.cpp)
add_executable(l7 src/ht_7/task7.cpp)
add_executable(l8 src/ht_8/task8.cpp)
add_executable(l9 src/ht_9/task9.cpp)
add_executable(l10 src/ht_10/task10.cpp)
add_executable(l11 src/ht_11/task11.cpp)
add_executable(l12 src/ht_12/task12.cpp)