cmake_minimum_required(VERSION 3.17)
project(univercpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(t0 src/course_2021/training/circtor.cpp)
add_executable(t1 src/course_2021/training/times1.cpp)
add_executable(t2 src/course_2021/training/test.cpp)
add_executable(l1 src/course_2021/ht_1/task1.cpp)
add_executable(l2 src/course_2021/ht_2/task2.cpp)
add_executable(l3 src/course_2021/ht_3/task3.cpp)
add_executable(l4 src/course_2021/ht_4/task4.cpp)
add_executable(l5 src/course_2021/ht_5/task5.cpp)
add_executable(l6 src/course_2021/ht_6/task6.cpp)
add_executable(l7 src/course_2021/ht_7/task7.cpp)
add_executable(l8 src/course_2021/ht_8/task8.cpp)
add_executable(l9 src/course_2021/ht_9/task9.cpp)
add_executable(l10 src/course_2021/ht_10/task10.cpp)
add_executable(l11 src/course_2021/ht_11/task11.cpp)
add_executable(l12 src/course_2021/ht_12/task12.cpp)
add_executable(hw1 src/course_2022/hw_1/hw_1.cpp)
add_executable(tas1 src/course_2022/hw_1/task1.cpp)
add_executable(tas2 src/course_2022/hw_2/task.cpp src/course_2022/hw_2/Complex.cpp src/course_2022/hw_2/Complex.h)